--- a/src/styles/_InputForm.scss
+++ b/src/styles/_InputForm.scss
@@ -17,3 +17,10 @@ h1 {
   outline: 1px solid black;
   height: 80%;
 }
+
+textarea {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  resize: none;
+}
