--- a/src/styles/_InputForm.scss
+++ b/src/styles/_InputForm.scss
@@ -4,7 +4,6 @@ h1 {
 }
 
 .input-form-container {
-  outline: 1px dashed black;
   height: 60vh;
   width: 20vw;
   min-width: 300px;
@@ -16,6 +15,7 @@ h1 {
 .input-form {
   outline: 1px solid black;
   height: 80%;
+  padding: 5%;
 }
 
 textarea {
@@ -23,4 +23,7 @@ textarea {
   width: 100%;
   height: 100%;
   resize: none;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: 200%;
 }
