--- a/src/styles/_InvalidBox.scss
+++ b/src/styles/_InvalidBox.scss
@@ -4,7 +4,6 @@ h1 {
 }
 
 .invalid-box-container {
-  outline: 1px dashed red;
   height: 60vh;
   width: 20vw;
   min-width: 300px;
@@ -16,4 +15,14 @@ h1 {
 .invalid-box {
   outline: 1px solid red;
   height: 80%;
+  font-size: 20px;
+}
+
+.invalid-row {
+  padding: 5%;
+}
+
+.invalid-message {
+  margin-top: 5%;
+  font-size: 12px;
 }
