--- a/src/styles/_InvalidBox.scss
+++ b/src/styles/_InvalidBox.scss
@@ -1,8 +1,3 @@
-h1 {
-  text-align: center;
-  font-size: 30px;
-}
-
 .invalid-box-container {
   height: 60vh;
   width: 20vw;
@@ -10,12 +5,15 @@ h1 {
   position: relative;
   padding-top: 5%;
   display: inline-block;
+  text-align: center;
 }
 
 .invalid-box {
   outline: 1px solid red;
   height: 80%;
   font-size: 20px;
+  text-align: left;
+  background-color: white;
 }
 
 .invalid-row {
