--- a/src/styles/_ValidBox.scss
+++ b/src/styles/_ValidBox.scss
@@ -1,8 +1,3 @@
-h1 {
-  text-align: center;
-  font-size: 30px;
-}
-
 .valid-box-container {
   height: 60vh;
   width: 20vw;
@@ -10,13 +5,15 @@ h1 {
   position: relative;
   padding-top: 5%;
   display: inline-block;
+  text-align: center;
 }
 
 .valid-box {
   outline: 1px solid green;
   height: 80%;
   font-size: 20px;
-  // padding: 5%;
+  text-align: left;
+  background-color: white;
 }
 
 .valid-row {
