--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,8 @@
 body, html {
   height: 100%;
   font-family: 'Arial';
+  color: rgb(64, 64, 64);
+  background-color: rgba(192, 192, 192, 0.1);
 }
 
 @media (max-width: 900px) {
@@ -14,5 +16,45 @@ body, html {
     justify-content: space-between;
     align-items: center;
   }
+}
 
+.header {
+  text-align: center;
+  font-size: 26px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 300;
+}
+
+.button {
+  height: 8vh;
+  width: 12vw;
+  min-width: 200px;
+  max-height: 100px;
+  font-size: 14px;
+  background-color: white;
+  color: black;
+  outline: none;
+  border: 1px solid black;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: .2s;
+  margin-top: 10%;
+  border-radius: 1vw;
+}
+
+.button:hover {
+  background-color: black;
+  color: white;
+  transition: .2s;
+}
+
+.green-button {
+  color: green;
+  border-color: green;
+}
+
+.green-button:hover {
+  background-color: green;
+  transition: .2s;
 }
