--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -40,7 +40,7 @@ body, html {
   letter-spacing: 2px;
   transition: .2s;
   margin-top: 10%;
-  border-radius: 1vw;
+  border-radius: 20px;
 }
 
 .button:hover {
