--- a/src/styles/_InputForm.scss
+++ b/src/styles/_InputForm.scss
@@ -4,8 +4,8 @@
   min-width: 300px;
   position: relative;
   padding-top: 5%;
-  display: inline-block;
   text-align: center;
+  padding-bottom: 20%;
 }
 
 .input-form {
