--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,29 +32,34 @@ body, html {
   min-width: 200px;
   max-height: 100px;
   font-size: 14px;
-  background-color: white;
-  color: black;
-  outline: none;
   border: 1px solid black;
+  background-color: white;
+  outline: none;
   text-transform: uppercase;
   letter-spacing: 2px;
   transition: .2s;
-  margin-top: 10%;
+  margin: 10%;
   border-radius: 20px;
+  cursor: pointer;
 }
 
-.button:hover {
+#black-button {
+  color: black;
+}
+
+#black-button:hover {
   background-color: black;
   color: white;
   transition: .2s;
 }
 
-.green-button {
+#green-button {
   color: green;
   border-color: green;
 }
 
-.green-button:hover {
+#green-button:hover {
   background-color: green;
+  color: white;
   transition: .2s;
 }
