--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,14 +18,6 @@ body, html {
   }
 }
 
-.header {
-  text-align: center;
-  font-size: 26px;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  font-weight: 300;
-}
-
 .button {
   height: 8vh;
   width: 12vw;
@@ -41,6 +33,35 @@ body, html {
   margin: 10%;
   border-radius: 20px;
   cursor: pointer;
+}
+
+.box {
+  outline: 1px solid black;
+  height: 80%;
+  font-size: 20px;
+  text-align: left;
+  background-color: white;
+}
+
+.container {
+  height: 60vh;
+  width: 20vw;
+  min-width: 300px;
+  position: relative;
+  padding-top: 5%;
+  text-align: center;
+}
+
+.header {
+  text-align: center;
+  font-size: 26px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 300;
+}
+
+.row {
+  padding: 5%;
 }
 
 #black-button {
